[package]
name = "solar-system-navigator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["webgl2"] }

# We can remove these since Bevy will handle the web functionality
# console_error_panic_hook = "0.1.7"
# vec2 = "0.2.1"
# wasm-bindgen = "0.2.100"
# web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Text"] }
